--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-beans', version: '5.3.19'
 // https://mvnrepository.com/artifact/org.springframework/spring-context
     implementation group: 'org.springframework', name: 'spring-context', version: '5.3.19'
+// https://mvnrepository.com/artifact/org.apache.commons/commons-imaging
+    implementation group: 'org.apache.commons', name: 'commons-imaging', version: '1.0-alpha2'
+
+
 }
 
 
