--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,12 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-context', version: '5.3.19'
 // https://mvnrepository.com/artifact/org.apache.commons/commons-imaging
     implementation group: 'org.apache.commons', name: 'commons-imaging', version: '1.0-alpha2'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
+    testCompileOnly 'org.projectlombok:lombok:1.18.24'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 
 }
 
